@@ -17,8 +17,9 @@
 <p><table class="tight" width="100%">
 <tr valign="top"><td valign="baseline" align="left"%>
 <nobr><b><font color="#000000">full-date-and-time</font></b></nobr></td><td valign="baseline"> &nbsp; </td><td valign="baseline" align="left" width="99%"><code>&#38;optional</code> <var>universal-time</var>
-<code>&#38;key</code> <var>time-zone daylight-savings-p include-seconds
-include-time-zone utc-offset-only 12-hour destination</var>
+<code>&#38;key</code> <var>time-zone daylight-savings-p all-numeric full-names
+include-day include-seconds include-time-zone
+month-precedes-date utc-offset-only 12-hour destination</var>
 <span 
     style="font-family: serif; font-style: normal">=&gt;</span> <var>result</var></td><td valign="baseline" align="right">[<i>Function</i>]
 </td></tr></table></p>
@@ -35,8 +36,13 @@ which is equivalent to the value returned by
 </td></tr><tr valign="top"><td valign="baseline" nowrap><i>time-zone</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> A <a href="ref-glossary.html#id215">time&nbsp;zone</a> (default is <code>nil</code>,
 which is equivalent to the current time zone adjusted for daylight
 saving time)
-</td></tr><tr valign="top"><td valign="baseline" nowrap><i>daylight-savings-p</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> A <a href="ref-glossary.html#id81">generalized&nbsp;boolean</a> (default is <code>nil</code>)        </td></tr><tr valign="top"><td valign="baseline" nowrap><i>include-seconds</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> A <a href="ref-glossary.html#id81">generalized&nbsp;boolean</a> (default is <code>nil</code>)
+</td></tr><tr valign="top"><td valign="baseline" nowrap><i>daylight-savings-p</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> A <a href="ref-glossary.html#id81">generalized&nbsp;boolean</a> (default is <code>nil</code>)        
+</td></tr><tr valign="top"><td valign="baseline" nowrap><i>all-numeric</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> A <a href="ref-glossary.html#id81">generalized&nbsp;boolean</a> (default is <code>nil</code>)
+</td></tr><tr valign="top"><td valign="baseline" nowrap><i>full-names</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> A <a href="ref-glossary.html#id81">generalized&nbsp;boolean</a> (default is <code>nil</code>)
+</td></tr><tr valign="top"><td valign="baseline" nowrap><i>include-day</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> A <a href="ref-glossary.html#id81">generalized&nbsp;boolean</a> (default is <code>nil</code>)
 </td></tr><tr valign="top"><td valign="baseline" nowrap><i>include-time-zone</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> A <a href="ref-glossary.html#id81">generalized&nbsp;boolean</a> (default is <code>nil</code>)
+</td></tr><tr valign="top"><td valign="baseline" nowrap><i>month-precedes-date</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> A <a href="ref-glossary.html#id81">generalized&nbsp;boolean</a> (default is 
+<nobr><b><a href="ref-month-precedes-date-var.html">*month-precedes-date*</a></b></nobr>)
 </td></tr><tr valign="top"><td valign="baseline" nowrap><i>utc-offset-only</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> A <a href="ref-glossary.html#id81">generalized&nbsp;boolean</a> (default is <code>nil</code>)
 </td></tr><tr valign="top"><td valign="baseline" nowrap><i>12-hour</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> A <a href="ref-glossary.html#id81">generalized&nbsp;boolean</a> (default is <code>nil</code>)
 </td></tr><tr valign="top"><td valign="baseline" nowrap><i>destination</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> Either <code>nil</code>, <code>t</code>, a stream, or a string with a fill 
@@ -47,12 +53,18 @@ pointer (default is <code>nil</code>)
 <p><span class="fndoclabel">Returns</span> <br />If <var>destination</var> is non-<code>nil</code>, then <code>nil</code>; otherwise, a string.
 </p>
 <p><span class="fndoclabel">Description</span> <br />A 17-character description (longer if
+<nobr><var>full-names</var></nobr>, <nobr><var>include-day</var></nobr>,
 <nobr><var>include-seconds</var></nobr>, <nobr><var>include-time-zone</var></nobr>, or
 <nobr><var>utc-offset-only</var></nobr> are non-<code>nil</code>) is generated.
 </p>
 <p><p> 
 <a name="id1">If</a> <nobr><var>universal-time</var></nobr> is not supplied or is <code>nil</code>, the current time
 (as returned by <nobr><code>get-universal-time</code></nobr> is used.
+</p>
+<p><p> 
+If <var>full-names</var> is supplied and is non-<code>nil</code>, the full name is generated
+rather than the abbreviated name for the month (and for the day of the week,
+if <var>include-day</var> is non-<code>nil</code>).
 </p>
 <p><p> 
 If <var>time-zone</var> is not supplied or is <code>nil</code>, it defaults to the current
@@ -82,6 +94,7 @@ in AM/PM format.
 <br>&nbsp;&nbsp;&nbsp;&nbsp;<a href="ref-internet-text-date-and-time.html"><b>internet-text-date-and-time</b></a>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;<a href="ref-iso8661-date-and-time.html"><b>iso8661-date-and-time</b></a>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;<a href="ref-message-log-date-and-time.html"><b>message-log-date-and-time</b></a>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;<a href="ref-parse-date-and-time.html"><b>parse-date-and-time</b></a>
 </p>
 <p><span class="fndoclabel">Examples</span> <br />Display the current date and time: 
 <pre class="pretop">
@@ -91,8 +104,44 @@ in AM/PM format.
 </pre>
 Display the current date and time (with seconds):
 <pre>
-  &gt; (full-date-and-time nil :include-seconds't)
+  &gt; (full-date-and-time nil :include-seconds 't)
   "Feb 16 2009 13:11:38"
+  &gt;
+</pre>
+Display the current date and time (with the day of the week):
+<pre>
+  &gt; (full-date-and-time nil :include-day 't)
+  "Mon Feb 16 2009 13:11"
+  &gt;
+</pre>
+Display the current date and time (with no abbreviations and with the day of
+the week):
+<pre>
+  &gt; (full-date-and-time nil :full-names 't :include-day 't)
+  "Monday, February 16, 2009 13:11"
+  &gt;
+</pre>
+Display the current date and time (with no abbreviations, with the month
+following the date, and with the day of the week):
+<pre>
+  &gt; (full-date-and-time nil :full-names 't :include-day 't
+                            :month-precedes-date nil)
+  "Monday, 16 February, 2009 13:11"
+  &gt;
+</pre>
+Display the current date and time (all numeric, with the abbreviated day of
+the week):
+<pre>
+  &gt; (full-date-and-time nil :all-numeric 't :include-day 't)
+  "Mon 02/16/2009 13:11"
+  &gt;
+</pre>
+Display the current date and time (all numeric, with the month following the
+date, and with the full day of the week):
+<pre>
+  &gt; (full-date-and-time nil :all-numeric 't :include-day 't 
+                        :full-names 't :month-precedes-date nil)
+  "Monday, 16/02/2009 13:11"
   &gt;
 </pre>
 Display the current date and time (with time zone):
