@@ -81,6 +81,7 @@ parse ended.
 <p><span class="fndoclabel">See also</span>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;<a href="ref-month-precedes-date-var.html"><b>*month-precedes-date*</b></a>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;<a href="ref-encode-date-and-time.html"><b>encode-date-and-time</b></a>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;<a href="ref-full-date-and-time.html"><b>full-date-and-time</b></a>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;<a href="ref-parse-date.html"><b>parse-date</b></a>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;<a href="ref-parse-duration.html"><b>parse-duration</b></a>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;<a href="ref-parse-time.html"><b>parse-time</b></a>
